changes icons for ibm-domino-subscribe input fields

--- a/lib/ibm-domino-subscribe/ibm-domino-subscribe.html
+++ b/lib/ibm-domino-subscribe/ibm-domino-subscribe.html
@@ -39,19 +39,19 @@
         <input id="node-input-server">
     </div>
     <div class="form-row">
-        <label for="node-input-topic"><i class="icon-user"></i> Topic to subscribe to</label>
+        <label for="node-input-topic"><i class="icon-briefcase"></i> Topic to subscribe to</label>
         <input type="text" id="node-input-topic">
     </div>
     <div class="form-row">
-        <label for="node-input-dominoContextRoot"><i class="icon-user"></i> path to endpoint</label>
+        <label for="node-input-dominoContextRoot"><i class="icon-arrow-right"></i> path to endpoint</label>
         <input type="text" id="node-input-dominoContextRoot">
     </div>
     <div class="form-row">
-        <label for="node-input-contextRoot"><i class="icon-user"></i> our own endpoint</label>
+        <label for="node-input-contextRoot"><i class="icon-arrow-left"></i> our own endpoint</label>
         <input type="text" id="node-input-contextRoot">
     </div>
     <div class="form-row">
-        <label for="node-input-publicUrl"><i class="icon-user"></i> our own public url</label>
+        <label for="node-input-publicUrl"><i class="icon-bookmark"></i> our own public url</label>
         <input type="text" id="node-input-publicUrl">
     </div>
 </script>
